# far-from-home

./: CMakeLists.txt  README.md  images.qrc  main.cpp  player.cpp  player.h  resourses.qrc
Controller/: abstract_controller.h  controller.cpp  controller.h
GameObject/: cat.cpp  cat.h  dog.cpp  dog.h  food.cpp  food.h  game_object.cpp  game_object.h  moving_object.cpp  moving_object.h  player.cpp  player.h  portal_object.cpp  portal_object.h  rigid_body.cpp  rigid_body.h  target_moving_object.cpp  target_moving_object.h  view_circle.cpp  view_circle.h
Model/: constants.h  game_map.cpp  game_map.h  generator.cpp  generator.h  group.cpp  group.h  level.h  level_generator.cpp  level_generator.h  map.cpp  map.h  model.cpp  model.h  music_player.cpp  music_player.h  point.cpp  point.h  size.cpp  size.h  timer.cpp  timer.h
View/: animation.cpp  animation.h  background.cpp  background.h  button.cpp  button.h  button_handler.cpp  button_handler.h  deathwindow.cpp  deathwindow.h  deathwindow.ui  global_progress_bar.cpp  global_progress_bar.h  menu.cpp  menu.h  menu.ui  progress_bar.cpp  progress_bar.h  resizer.cpp  resizer.h  result_window.cpp  result_window.h  result_window.ui  view.cpp  view.h  warning.cpp  warning.h  win_window.cpp  win_window.h  winwindow.ui
resourses/: buttons.qss  tiles_templates.json
